mini-pascal/test_cases/bad/Example3.pas
Program Example3;
(* COMMENTS *)
Begin
	Writeln('Hello World. Prepare to learn PASCAL!!')
	Readln;
End.